# Aquagenesys

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.demo.yml  pyproject.toml
aquagenesys/: __init__.py  __main__.py
core/: config.py
dirty_puddle/: __init__.py  __main__.py
docs/: CODEX_STANDARDS.md  README.md
evals/: collapse_analysis.py  recovery_assays.py  runner.py
reports/: README.md  aquagenesys_agent_mechanics_explainer_2026-05-23.json  aquagenesys_agent_mechanics_explainer_2026-05-23.md  aquagenesys_bioluminescent_reef_renderer_v01_2026-05-24.json  aquagenesys_bioluminescent_reef_renderer_v01_2026-05-24.md  aquagenesys_bioluminescent_reef_renderer_v01_polish_2026-05-26.json  aquagenesys_bioluminescent_reef_renderer_v01_polish_2026-05-26.md  aquagenesys_creature_portrait_grammar_v02_2026-05-26.json  aquagenesys_creature_portrait_grammar_v02_2026-05-26.md  aquagenesys_skill_use_descendant_outcome_tracking_2026-05-23.json  aquagenesys_skill_use_descendant_outcome_tracking_2026-05-23.md  aquagenesys_v034_life_history_egg_bank_2026-05-23.json  aquagenesys_v034_life_history_egg_bank_2026-05-23.md  aquagenesys_v035_instruction_inheritance_2026-05-23.json  aquagenesys_v035_instruction_inheritance_2026-05-23.md  aquagenesys_v036_ecology_observatory_ux_2026-05-23.json  aquagenesys_v036_ecology_observatory_ux_2026-05-23.md  aquagenesys_v037_recovery_assays_observability_2026_05_23.json  aquagenesys_v037_recovery_assays_observability_2026_05_23.md  aquagenesys_v038_lineage_policy_genealogy_explorer_2026_05_23.json  (+15 more)
(+111 files in other folders)
