[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aquagenesys"
version = "0.3.7"
description = "A real-time 2D dirty-puddle ecology with an observatory UX for lineage, behavior, and reproduction visibility."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.29,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
include = ["aquagenesys*"]
